...
              TextButton(
                onPressed: () async {
                  Navigator.of(context)
                      .pushNamedAndRemoveUntil(loginRoute, (route) => false);
                },
                child: const Text(
                  'Login here',
                  style: TextStyle(
                    fontSize: 16,
                  ),
                ),
              ),
            ],
...
